baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__02_parser__builtin_refs.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "ApiCall"
    L_BRACE "{"
    FIELD
      WORD "request"
      TYPE_EXPR "baml.http.Request"
        WORD "baml"
        DOT "."
        WORD "http"
        DOT "."
        WORD "Request"
    FIELD
      WORD "label"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithResponse"
    L_BRACE "{"
    FIELD
      WORD "response"
      TYPE_EXPR "baml.http.Response"
        WORD "baml"
        DOT "."
        WORD "http"
        DOT "."
        WORD "Response"
    FIELD
      WORD "status"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "MixedBuiltin"
    L_BRACE "{"
    FIELD
      WORD "requests"
      TYPE_EXPR "baml.http.Request[]"
        WORD "baml"
        DOT "."
        WORD "http"
        DOT "."
        WORD "Request"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "metadata"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "baml.http.Request"
            WORD "baml"
            DOT "."
            WORD "http"
            DOT "."
            WORD "Request"
          GREATER ">"
    FIELD
      WORD "maybe_request"
      TYPE_EXPR "baml.http.Request?"
        WORD "baml"
        DOT "."
        WORD "http"
        DOT "."
        WORD "Request"
        QUESTION "?"
    FIELD
      WORD "union_request"
      TYPE_EXPR "baml.http.Request | string"
        WORD "baml"
        DOT "."
        WORD "http"
        DOT "."
        WORD "Request"
        PIPE "|"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithStreamRef"
    L_BRACE "{"
    FIELD
      WORD "partial"
      TYPE_EXPR "baml.http.Request$stream"
        WORD "baml"
        DOT "."
        WORD "http"
        DOT "."
        WORD "Request$stream"
    R_BRACE "}"

=== ERRORS ===
None
