baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__02_parser__complex.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Color"
    L_BRACE "{"
    ENUM_VARIANT "Red"
      WORD "Red"
    ENUM_VARIANT "Green"
      WORD "Green"
    ENUM_VARIANT "Blue"
      WORD "Blue"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Inner"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "StringAlias"
    EQUALS "="
    TYPE_EXPR "string"
      WORD "string"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Complex"
    L_BRACE "{"
    FIELD
      WORD "color"
      TYPE_EXPR "Color"
        WORD "Color"
    FIELD
      WORD "literal"
      TYPE_EXPR "5"
        INTEGER_LITERAL "5"
    FIELD
      WORD "str_literal"
      TYPE_EXPR
        STRING_LITERAL "hello"
          QUOTE """
          WORD "hello"
          QUOTE """
    FIELD
      WORD "union_field"
      TYPE_EXPR "int | string[]"
        WORD "int"
        PIPE "|"
        WORD "string"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "alias_field"
      TYPE_EXPR "StringAlias"
        WORD "StringAlias"
    FIELD
      WORD "nested_list"
      TYPE_EXPR "Inner[][]"
        WORD "Inner"
        L_BRACKET "["
        R_BRACKET "]"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "optional_class"
      TYPE_EXPR "Inner?"
        WORD "Inner"
        QUESTION "?"
    FIELD
      WORD "union_with_null"
      TYPE_EXPR "int | null | string"
        WORD "int"
        PIPE "|"
        WORD "null"
        PIPE "|"
        WORD "string"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "AliasToClass"
    EQUALS "="
    TYPE_EXPR "Inner"
      WORD "Inner"

=== ERRORS ===
None
