baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__02_parser__edge_cases.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "SelfRef"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "children"
      TYPE_EXPR "SelfRef[]"
        WORD "SelfRef"
        L_BRACKET "["
        R_BRACKET "]"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "AllMustExist"
    L_BRACE "{"
    FIELD
      WORD "a"
      TYPE_EXPR
        WORD "int"
        ATTRIBUTE "@stream.must_exist"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "must_exist"
    FIELD
      WORD "b"
      TYPE_EXPR
        WORD "string"
        ATTRIBUTE "@stream.must_exist"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "must_exist"
    FIELD
      WORD "c"
      TYPE_EXPR
        WORD "float"
        ATTRIBUTE "@stream.must_exist"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "must_exist"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "AllDone"
    L_BRACE "{"
    FIELD
      WORD "a"
      TYPE_EXPR
        WORD "int"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
    FIELD
      WORD "b"
      TYPE_EXPR
        WORD "string"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
    FIELD
      WORD "c"
      TYPE_EXPR
        WORD "EdgeFoo"
        ATTRIBUTE "@stream.done"
          AT "@"
          WORD "stream"
          DOT "."
          WORD "done"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "EdgeFoo"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "NeverFields"
    L_BRACE "{"
    FIELD
      WORD "lit_int"
      TYPE_EXPR "42"
        INTEGER_LITERAL "42"
    FIELD
      WORD "lit_str"
      TYPE_EXPR
        STRING_LITERAL "fixed"
          QUOTE """
          WORD "fixed"
          QUOTE """
    FIELD
      WORD "lit_bool"
      TYPE_EXPR "true"
        WORD "true"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "MustExistClass"
    L_BRACE "{"
    FIELD
      WORD "v"
      TYPE_EXPR "int"
        WORD "int"
    BLOCK_ATTRIBUTE "@@stream.must_exist"
      AT_AT "@@"
      WORD "stream"
      DOT "."
      WORD "must_exist"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "UnionWithMustExist"
    L_BRACE "{"
    FIELD
      WORD "mixed"
      TYPE_EXPR "MustExistClass | 5"
        WORD "MustExistClass"
        PIPE "|"
        INTEGER_LITERAL "5"
    R_BRACE "}"

=== ERRORS ===
None
