baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__02_parser__main.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Primitives"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "count"
      TYPE_EXPR "int"
        WORD "int"
    FIELD
      WORD "flag"
      TYPE_EXPR "bool"
        WORD "bool"
    FIELD
      WORD "score"
      TYPE_EXPR "float"
        WORD "float"
    R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Status"
    L_BRACE "{"
    ENUM_VARIANT "Active"
      WORD "Active"
    ENUM_VARIANT "Inactive"
      WORD "Inactive"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithEnum"
    L_BRACE "{"
    FIELD
      WORD "status"
      TYPE_EXPR "Status"
        WORD "Status"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithLiterals"
    L_BRACE "{"
    FIELD
      WORD "type"
      TYPE_EXPR
        STRING_LITERAL "resume"
          QUOTE """
          WORD "resume"
          QUOTE """
    FIELD
      WORD "version"
      TYPE_EXPR "1"
        INTEGER_LITERAL "1"
    FIELD
      WORD "enabled"
      TYPE_EXPR "true"
        WORD "true"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Inner"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Outer"
    L_BRACE "{"
    FIELD
      WORD "inner"
      TYPE_EXPR "Inner"
        WORD "Inner"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithLists"
    L_BRACE "{"
    FIELD
      WORD "strings"
      TYPE_EXPR "string[]"
        WORD "string"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "ints"
      TYPE_EXPR "int[]"
        WORD "int"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "classes"
      TYPE_EXPR "Inner[]"
        WORD "Inner"
        L_BRACKET "["
        R_BRACKET "]"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithMaps"
    L_BRACE "{"
    FIELD
      WORD "simple"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "int"
            WORD "int"
          GREATER ">"
    FIELD
      WORD "complex"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "Inner"
            WORD "Inner"
          GREATER ">"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithNested"
    L_BRACE "{"
    FIELD
      WORD "matrix"
      TYPE_EXPR "int[][]"
        WORD "int"
        L_BRACKET "["
        R_BRACKET "]"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "class_matrix"
      TYPE_EXPR "Inner[][]"
        WORD "Inner"
        L_BRACKET "["
        R_BRACKET "]"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "nested_map"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "int[]"
            WORD "int"
            L_BRACKET "["
            R_BRACKET "]"
          GREATER ">"
    FIELD
      WORD "class_nested_map"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "Inner[]"
            WORD "Inner"
            L_BRACKET "["
            R_BRACKET "]"
          GREATER ">"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithUnions"
    L_BRACE "{"
    FIELD
      WORD "simple"
      TYPE_EXPR "int | string"
        WORD "int"
        PIPE "|"
        WORD "string"
    FIELD
      WORD "with_class"
      TYPE_EXPR "Inner | Primitives"
        WORD "Inner"
        PIPE "|"
        WORD "Primitives"
    FIELD
      WORD "mixed"
      TYPE_EXPR "int | Inner"
        WORD "int"
        PIPE "|"
        WORD "Inner"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "WithOptionals"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string?"
        WORD "string"
        QUESTION "?"
    FIELD
      WORD "inner"
      TYPE_EXPR "Inner?"
        WORD "Inner"
        QUESTION "?"
    FIELD
      WORD "items"
      TYPE_EXPR "int[]?"
        WORD "int"
        L_BRACKET "["
        R_BRACKET "]"
        QUESTION "?"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "SimpleAlias"
    EQUALS "="
    TYPE_EXPR "string"
      WORD "string"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "ClassAlias"
    EQUALS "="
    TYPE_EXPR "Inner"
      WORD "Inner"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "UnionAlias"
    EQUALS "="
    TYPE_EXPR "int | Inner"
      WORD "int"
      PIPE "|"
      WORD "Inner"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "OptionalAlias"
    EQUALS "="
    TYPE_EXPR "Inner?"
      WORD "Inner"
      QUESTION "?"
  CLASS_DEF
    KW_CLASS "class"
    WORD "DynamicClass"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    BLOCK_ATTRIBUTE "@@dynamic"
      AT_AT "@@"
      KW_DYNAMIC "dynamic"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Education"
    L_BRACE "{"
    FIELD
      WORD "school"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "year"
      TYPE_EXPR "int"
        WORD "int"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "AliasedType"
    EQUALS "="
    TYPE_EXPR "string | int"
      WORD "string"
      PIPE "|"
      WORD "int"
  CLASS_DEF
    KW_CLASS "class"
    WORD "AllDefaults"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "age"
      TYPE_EXPR "int"
        WORD "int"
    FIELD
      WORD "score"
      TYPE_EXPR "float"
        WORD "float"
    FIELD
      WORD "active"
      TYPE_EXPR "bool"
        WORD "bool"
    FIELD
      WORD "type"
      TYPE_EXPR
        STRING_LITERAL "resume"
          QUOTE """
          WORD "resume"
          QUOTE """
    FIELD
      WORD "version"
      TYPE_EXPR "42"
        INTEGER_LITERAL "42"
    FIELD
      WORD "status"
      TYPE_EXPR "Status"
        WORD "Status"
    FIELD
      WORD "edu"
      TYPE_EXPR "Education"
        WORD "Education"
    FIELD
      WORD "scores"
      TYPE_EXPR "int[]"
        WORD "int"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "education"
      TYPE_EXPR "Education[]"
        WORD "Education"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "nested_edu"
      TYPE_EXPR "Education[][]"
        WORD "Education"
        L_BRACKET "["
        R_BRACKET "]"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "edu_map"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "Education"
            WORD "Education"
          GREATER ">"
    FIELD
      WORD "data"
      TYPE_EXPR "AliasedType"
        WORD "AliasedType"
    FIELD
      WORD "mixed"
      TYPE_EXPR "int | Education"
        WORD "int"
        PIPE "|"
        WORD "Education"
    FIELD
      WORD "maybe"
      TYPE_EXPR "string?"
        WORD "string"
        QUESTION "?"
    FIELD
      WORD "maybe_list"
      TYPE_EXPR "int[]?"
        WORD "int"
        L_BRACKET "["
        R_BRACKET "]"
        QUESTION "?"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Resume"
    L_BRACE "{"
    FIELD
      WORD "name"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "age"
      TYPE_EXPR "int"
        WORD "int"
    FIELD
      WORD "type"
      TYPE_EXPR
        STRING_LITERAL "resume"
          QUOTE """
          WORD "resume"
          QUOTE """
    FIELD
      WORD "status"
      TYPE_EXPR "Status"
        WORD "Status"
    FIELD
      WORD "education"
      TYPE_EXPR "Education[]"
        WORD "Education"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "scores"
      TYPE_EXPR "int[]"
        WORD "int"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "metadata"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "string"
            WORD "string"
          GREATER ">"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "MixedType"
    EQUALS "="
    TYPE_EXPR "int | Education"
      WORD "int"
      PIPE "|"
      WORD "Education"
  CLASS_DEF
    KW_CLASS "class"
    WORD "TreeNode"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "children"
      TYPE_EXPR "TreeNode[]"
        WORD "TreeNode"
        L_BRACKET "["
        R_BRACKET "]"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Container"
    L_BRACE "{"
    FIELD
      WORD "matrix"
      TYPE_EXPR "int[][]"
        WORD "int"
        L_BRACKET "["
        R_BRACKET "]"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "grid"
      TYPE_EXPR "TreeNode[][]"
        WORD "TreeNode"
        L_BRACKET "["
        R_BRACKET "]"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "groups"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "TreeNode[]"
            WORD "TreeNode"
            L_BRACKET "["
            R_BRACKET "]"
          GREATER ">"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "Foo"
    EQUALS "="
    TYPE_EXPR "int | string"
      WORD "int"
      PIPE "|"
      WORD "string"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "Bar"
    EQUALS "="
    TYPE_EXPR "Foo | bool"
      WORD "Foo"
      PIPE "|"
      WORD "bool"

=== ERRORS ===
None
