baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__02_parser__ns_foo_with_top_level_refs.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "NsClass"
    L_BRACE "{"
    FIELD
      WORD "value"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "NsEnum"
    L_BRACE "{"
    ENUM_VARIANT "Alpha"
      WORD "Alpha"
    ENUM_VARIANT "Beta"
      WORD "Beta"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    KW_TYPE "type"
    WORD "NsAlias"
    EQUALS "="
    TYPE_EXPR "string | int"
      WORD "string"
      PIPE "|"
      WORD "int"
  CLASS_DEF
    KW_CLASS "class"
    WORD "NsRefToTop"
    L_BRACE "{"
    FIELD
      WORD "inner"
      TYPE_EXPR "root.Inner"
        WORD "root"
        DOT "."
        WORD "Inner"
    FIELD
      WORD "status"
      TYPE_EXPR "root.Status"
        WORD "root"
        DOT "."
        WORD "Status"
    FIELD
      WORD "items"
      TYPE_EXPR "root.Inner[]"
        WORD "root"
        DOT "."
        WORD "Inner"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "alias_ref"
      TYPE_EXPR "root.ClassAlias"
        WORD "root"
        DOT "."
        WORD "ClassAlias"
    R_BRACE "}"

=== ERRORS ===
None
