baml_language/crates/baml_tests/snapshots/diagnostic_errors/stream_types/baml_tests__diagnostic_errors__stream_types__02_parser__with_ns_foo_refs.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "TopRefToNs"
    L_BRACE "{"
    FIELD
      WORD "ns_class"
      TYPE_EXPR "root.foo.NsClass"
        WORD "root"
        DOT "."
        WORD "foo"
        DOT "."
        WORD "NsClass"
    FIELD
      WORD "ns_enum"
      TYPE_EXPR "root.foo.NsEnum"
        WORD "root"
        DOT "."
        WORD "foo"
        DOT "."
        WORD "NsEnum"
    FIELD
      WORD "ns_items"
      TYPE_EXPR "root.foo.NsClass[]"
        WORD "root"
        DOT "."
        WORD "foo"
        DOT "."
        WORD "NsClass"
        L_BRACKET "["
        R_BRACKET "]"
    FIELD
      WORD "ns_map"
      TYPE_EXPR
        WORD "map"
        TYPE_ARGS
          LESS "<"
          TYPE_EXPR "string"
            WORD "string"
          COMMA ","
          TYPE_EXPR "root.foo.NsClass"
            WORD "root"
            DOT "."
            WORD "foo"
            DOT "."
            WORD "NsClass"
          GREATER ">"
    FIELD
      WORD "ns_alias"
      TYPE_EXPR "root.foo.NsAlias"
        WORD "root"
        DOT "."
        WORD "foo"
        DOT "."
        WORD "NsAlias"
    R_BRACE "}"

=== ERRORS ===
None
